# tor4

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: lint.yml  test.yml
benchmarks/nn/: loss.py
benchmarks/tensor/: backward.py
examples/: mnist.py
tests/: quadratic_test.py
tests/nn/: bce_with_logits_test.py  ce_test.py  conv2d_test.py  dropout_test.py  linear_test.py  logsoftmax_test.py  mse_loss_test.py  parameter_test.py  relu_test.py  softmax_test.py
tests/tensor/: add_test.py  detach_test.py  div_test.py  graph_retain_test.py  matmul_test.py  max_test.py  mul_test.py  neg_test.py  no_grad_test.py  pow_test.py  sigmoid_test.py  slice_test.py  sub_test.py  sum_test.py  tensor_test.py  view_test.py
tor4/: __init__.py  core.py  tensor.py
tor4/nn/: __init__.py  functional.py  init.py  parameter.py
tor4/nn/modules/: __init__.py  activation.py  conv2d.py  dropout.py  linear.py  module.py  sequential.py  utils.py
tor4/optim/: optimizer.py  sgd.py
